--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-<head>  <meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
-<meta charset="UTF-8">  <meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
+<head>  
+<meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
+<meta charset="UTF-8">  
+<meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
 <title>דּף הַבַּיִת</title>
 <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/3/3c/Google_Favicon_2025.svg" type="image/svg+xml">
 <meta name="description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל, ותוכן עדכני. אתר נגיש ונוח לגלישה.">
@@ -39,7 +41,7 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 .search-box input{border:none;outline:none;flex:1;padding:10px 12px;font-size:1em;border-radius:50px}
 .search-box button{background:none;border:none;cursor:pointer;font-size:1.2em;margin-left:8px}
 .page{display:none;margin-top:70px;margin-right:100px;flex:1;display:flex;flex-direction:column}
-.category-box{background:rgba(255,255,255,.7);padding:15px;margin-bottom:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.08)}
+.category-box{background:rgba(255,255,255,.7);padding:15px;margin-bottom:20px;border-radius:12px;box-shadow:0 4px 12px rgba(0,0,0,0.08);position:relative}
 .category-box h3{margin:0 0 15px}
 .cards-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(80px,1fr));gap:20px}
 .card{background:#f0f2f5;border-radius:16px;padding:10px;display:flex;flex-direction:column;align-items:center;justify-content:center;text-align:center;cursor:pointer;transition:.2s;position:relative}
@@ -50,15 +52,16 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 .card.editing input{width:100%;margin:5px 0;padding:6px;border-radius:6px;border:1px solid #ccc;font-size:.8em}
 .delete-btn{position:absolute;top:6px;left:6px;background:#dc3545;border:none;color:#fff;font-size:.8em;padding:4px 6px;border-radius:6px;cursor:pointer;transition:.2s}
 .delete-btn:hover{background:#a71d2a}
+.category-delete-btn{position:absolute;top:10px;left:10px;background:#dc3545;color:#fff;border:none;padding:4px 6px;border-radius:6px;font-size:0.8em;cursor:pointer;display:none;z-index:10;transition:.2s}
+.category-delete-btn:hover{background:#a71d2a}
 .add-btn{background:#0078d7;color:#fff;border:none;border-radius:50%;width:40px;height:40px;cursor:pointer;font-size:1.5em;font-weight:bold;margin:10px auto;display:none}
 .add-btn:hover{background:#005fa3}
 .history-item{background:rgba(255,255,255,.7);padding:10px 15px;border-radius:8px;border-bottom:1px solid #ddd;display:flex;align-items:center;gap:10px}
 .history-item img{width:24px;height:24px;border-radius:4px;object-fit:cover}
 .history-item a{color:#0078d7;text-decoration:none;font-weight:600}
-/* --- השינוי כאן: העלאת המיקום של ה-6 כרטיסים בדף הבית --- */
-.recent-home{margin-top:-0px; /* קודם היה 0px */ display:flex;gap:10px;z-index:15}
+.recent-home{margin-top:-0px; display:flex;gap:10px;z-index:15}
 .recent-home .card{width:80px;height:80px;padding:3px}
-.recent-home .card a{font-size:0.7em} /* קטן יותר */
+.recent-home .card a{font-size:0.7em}
 .extras-container{display:flex;gap:15px;height:76vh}
 .frame{flex:1;margin:0;border-radius:15px;overflow:hidden;box-shadow:0 4px 8px rgba(0,0,0,0.2);background:#fff}
 .frame iframe{width:100%;height:100%;border:none}
@@ -94,27 +97,12 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 </div>
 
 <div id="home" class="page">
-
-  <div id="dateTimeBox" style="
-      position:fixed;
-      top:60px;
-      left:20px;
-      background:rgba(255,255,255,0.85);
-      padding:10px 15px;
-      border-radius:12px;
-      font-family:Segoe UI, Arial, sans-serif;
-      font-size:14px;
-      box-shadow:0 2px 8px rgba(0,0,0,0.15);
-      text-align:center;
-      z-index:50;">
+  <div id="dateTimeBox" style="position:fixed; top:60px; left:20px; background:rgba(255,255,255,0.85); padding:10px 15px; border-radius:12px; font-family:Segoe UI, Arial, sans-serif; font-size:14px; box-shadow:0 2px 8px rgba(0,0,0,0.15); text-align:center; z-index:50;">
     <div id="clock">00:00</div>
     <div id="date">01/01/2025</div>
   </div>
-
   <div style="margin-top:350px;">
-    <h3 style="margin:20px 0 20px; background:rgba(255,255,255,0.7);
-               padding:8px 12px; border-radius:10px;
-               width:fit-content; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
+    <h3 style="margin:20px 0 20px; background:rgba(255,255,255,0.7); padding:8px 12px; border-radius:10px; width:fit-content; box-shadow:0 2px 6px rgba(0,0,0,0.1);">
       נפתחו לאחרונה
     </h3>
     <div class="recent-home" id="recentHomeSimple"></div>
@@ -122,16 +110,21 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 </div>
 
 <div id="sites" class="page">
-  <div class="category-box">
-    <h3>שימושי ונפוץ</h3>
-    <div class="cards-grid" id="usefulColumn"></div>
-    <button class="add-btn" onclick="addSite('useful')">+</button>
+  <div id="categoriesContainer">
+    <div class="category-box">
+      <h3 contenteditable="false">שימושי ונפוץ</h3>
+      <div class="cards-grid" id="usefulColumn"></div>
+      <button class="add-btn" onclick="addSite('useful')">+</button>
+      <button class="category-delete-btn" onclick="deleteCategory(this)">❌ מחיקה</button>
+    </div>
+    <div class="category-box">
+      <h3 contenteditable="false">חדשות / פנאי</h3>
+      <div class="cards-grid" id="funColumn"></div>
+      <button class="add-btn" onclick="addSite('fun')">+</button>
+      <button class="category-delete-btn" onclick="deleteCategory(this)">❌ מחיקה</button>
+    </div>
   </div>
-  <div class="category-box">
-    <h3>חדשות / פנאי</h3>
-    <div class="cards-grid" id="funColumn"></div>
-    <button class="add-btn" onclick="addSite('fun')">+</button>
-  </div>
+  <button class="add-btn" id="addCategoryBtn" style="display:none" onclick="addCategory()">+ קטגוריה</button>
 </div>
 
 <div id="extras" class="page">
@@ -164,18 +157,20 @@ const savedBackground=localStorage.getItem("backgroundURL");if(savedBackground)d
 function renderCards(section,columnId){const col=document.getElementById(columnId);col.innerHTML="";data[section].forEach((site,index)=>{const card=document.createElement("div");card.className="card";card.draggable=editMode;card.dataset.index=index;if(editMode){card.classList.add("editing");card.innerHTML=`<input value="${site.name}" placeholder="שם"><input value="${site.url}" placeholder="כתובת"><input value="${site.icon}" placeholder="כתובת אייקון">`;const delBtn=document.createElement("button");delBtn.textContent="מחיקה";delBtn.className="delete-btn";delBtn.onclick=e=>{e.stopPropagation();data[section].splice(index,1);renderCards(section,columnId)};card.appendChild(delBtn);card.addEventListener("dragstart",e=>{e.dataTransfer.setData("text/plain",index)});col.addEventListener("dragover",e=>{e.preventDefault()});col.addEventListener("drop",e=>{e.preventDefault();const fromIndex=e.dataTransfer.getData("text/plain"),toIndex=index;if(fromIndex!==toIndex){const moved=data[section].splice(fromIndex,1)[0];data[section].splice(toIndex,0,moved);renderCards(section,columnId)}})}else{card.onclick=()=>{window.open(site.url,"_self");addRecent(section,index)};card.innerHTML=`<img src="${site.icon||'https://via.placeholder.com/32'}"><a>${site.name}</a>`}col.appendChild(card)})}
 function renderHistory(){const col=document.getElementById("recentColumn");col.innerHTML="";data.recent.forEach(site=>{const item=document.createElement("div");item.className="history-item";item.innerHTML=`<img src="${site.icon||'https://via.placeholder.com/24'}"><a href="${site.url}" target="_self">${site.name}</a><small>${site.time||""}</small>`;col.appendChild(item)})}
 function renderRecentHome(){const col=document.getElementById("recentHomeSimple");col.innerHTML="";data.recent.slice(0,6).forEach(site=>{const card=document.createElement("div");card.className="card";card.innerHTML=`<img src="${site.icon||'https://via.placeholder.com/32'}"><a>${site.name}</a>`;card.onclick=()=>window.open(site.url,"_self");col.appendChild(card)})}
-function render(){renderCards("useful","usefulColumn");renderCards("fun","funColumn");renderHistory();renderRecentHome();document.querySelectorAll(".add-btn").forEach(btn=>btn.style.display=editMode?"block":"none")}
+function render(){renderCards("useful","usefulColumn");renderCards("fun","funColumn");renderHistory();renderRecentHome();document.querySelectorAll(".add-btn").forEach(btn=>btn.style.display=editMode?"block":"none");document.getElementById("addCategoryBtn").style.display=editMode?"block":"none";document.querySelectorAll("#categoriesContainer h3").forEach(h=>h.contentEditable=editMode);document.querySelectorAll(".category-delete-btn").forEach(btn=>btn.style.display=editMode?"block":"none")}
 function addRecent(section,index){const site={...data[section][index]};site.time=new Date().toLocaleString("he-IL");data.recent=data.recent.filter(s=>s.url!==site.url);data.recent.unshift(site);data.recent=data.recent.slice(0,40);localStorage.setItem("shortcuts",JSON.stringify(data));renderHistory();renderRecentHome()}
 function showPage(pageId,btn){document.querySelectorAll(".page").forEach(p=>p.style.display="none");document.getElementById(pageId).style.display="flex";document.querySelectorAll(".side-menu .top-buttons button").forEach(b=>b.classList.remove("active"));if(btn)btn.classList.add("active");localStorage.setItem("lastPage",pageId);const editBtn=document.getElementById("editBtn");if(pageId==="sites"){editBtn.style.display="flex"}else{editBtn.style.display="none";if(editMode)toggleEdit()}}
 function toggleEdit(){editMode=!editMode;document.querySelector(".save-btn").style.visibility=editMode?"visible":"hidden";document.querySelector(".cancel-btn").style.visibility=editMode?"visible":"hidden";render()}
-function saveData(){["useful","fun"].forEach(section=>{const col=document.getElementById(section==="useful"?"usefulColumn":"funColumn");col.querySelectorAll(".card").forEach((card,index)=>{if(editMode){const inputs=card.querySelectorAll("input");if(inputs.length===3){data[section][index].name=inputs[0].value.trim()||"שם חדש";data[section][index].url=inputs[1].value.trim()||"https://";data[section][index].icon=inputs[2].value.trim()||"https://via.placeholder.com/32"}}})});localStorage.setItem("shortcuts",JSON.stringify(data));toggleEdit()}
+function saveData(){["useful","fun"].forEach(section=>{const col=document.getElementById(section==="useful"?"usefulColumn":"funColumn");col.querySelectorAll(".card").forEach((card,index)=>{if(editMode){const inputs=card.querySelectorAll("input");if(inputs.length===3){data[section][index].name=inputs[0].value.trim()||"שם חדש";data[section][index].url=inputs[1].value.trim()||"https://";data[section][index].icon=inputs[2].value.trim()||"https://via.placeholder.com/32"}}})});document.querySelectorAll("#categoriesContainer h3").forEach(h=>h.textContent=h.textContent.trim());localStorage.setItem("shortcuts",JSON.stringify(data));toggleEdit()}
 function cancelEdit(){data=JSON.parse(localStorage.getItem("shortcuts"))||defaultData;toggleEdit()}
 function addSite(section){data[section].push({name:"חדש",url:"https://",icon:"https://via.placeholder.com/32"});render()}
+function addCategory(){const container=document.getElementById("categoriesContainer");const newCat=document.createElement("div");newCat.className="category-box";newCat.innerHTML=`<h3 contenteditable="true">קטגוריה חדשה</h3><div class="cards-grid"></div><button class="add-btn" onclick="addSite('new')">+</button><button class="category-delete-btn" onclick="deleteCategory(this)">❌ מחיקה</button>`;container.appendChild(newCat)}
+function deleteCategory(btn){if(confirm("למחוק קטגוריה זו?")){btn.parentElement.remove()}}
 function changeBackground(){const url=prompt("הכנס כתובת תמונה לרקע:");if(url){document.body.style.background=`url('${url}') center/cover no-repeat`;localStorage.setItem("backgroundURL",url)}}
 function searchGoogle(){const input=document.getElementById("searchInput").value.trim();if(input){if(input.startsWith("http://")||input.startsWith("https://"))window.open(input,"_self");else if(input.includes("."))window.open("https://"+input,"_self");else window.open("https://www.google.com/search?q="+encodeURIComponent(input),"_self")}}
 const lastPage=localStorage.getItem("lastPage")||"home";showPage(lastPage,document.querySelector(`.side-menu button[onclick*="${lastPage}"]`));render();
 function updateDateTime(){const now=new Date();const optionsDate={day:'2-digit',month:'2-digit',year:'numeric'};const optionsDay={weekday:'long'};document.getElementById("clock").textContent=now.toLocaleTimeString("he-IL",{hour:'2-digit',minute:'2-digit'});document.getElementById("date").textContent=now.toLocaleDateString("he-IL",optionsDay)+" | "+now.toLocaleDateString("he-IL",optionsDate)}
 setInterval(updateDateTime,1000);updateDateTime();
 </script>
-</body>
+</body> 
 </html>
