--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 
 <div id="extras" class="page">
   <div class="category-box">
-    <h3>מוזיקה לייב</h3>
+    <h3>מוזיקה</h3>
     <div class="extras-container">
       <div class="frame"><iframe src="https://kcm.fm/"></iframe></div>
       <div class="frame"><iframe src="https://kol-play.co.il/"></iframe></div>
@@ -218,3 +218,4 @@ setInterval(updateDateTime,1000);updateDateTime();
 </script>
 </body> 
 </html>
+
