--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
   <div class="top-buttons">
     <button onclick="showPage('home',this)"><img src="https://cdn-icons-png.flaticon.com/128/263/263115.png"><span>בית</span></button>
     <button onclick="showPage('sites',this)"><img src="https://cdn-icons-png.flaticon.com/128/900/900782.png"><span>אתרים</span></button>
-    <button onclick="showPage('extras',this)"><img src="https://cdn-icons-png.flaticon.com/128/2995/2995035.png"><span>מוזיקה לייב</span></button>
+    <button onclick="showPage('extras',this)"><img src="https://cdn-icons-png.flaticon.com/128/2995/2995035.png"><span>מוזיקה</span></button>
     <button onclick="showPage('historyPage',this)"><img src="https://cdn-icons-png.flaticon.com/128/833/833602.png"><span>היסטוריה</span></button>
     <button onclick="showPage('news',this)"><img src="https://cdn-icons-png.flaticon.com/128/81/81460.png"><span>חדשות</span></button>
   </div>
@@ -218,4 +218,3 @@ setInterval(updateDateTime,1000);updateDateTime();
 </script>
 </body> 
 </html>
-
