--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">  
 <meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
 <title>דּף הַבַּיִת</title>
-<link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/3/3c/Google_Favicon_2025.svg" type="image/svg+xml">
+<link rel="icon" href="https://cdn-icons-png.flaticon.com/128/6268/6268612.png" type="image/svg+xml">
 <meta name="description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל, ותוכן עדכני. אתר נגיש ונוח לגלישה.">
 <meta name="keywords" content="דף הבית, קישורים שימושיים, חדשות, פנאי, חיפוש, נגישות, אתר נח, תפריט צד, אתרי בית">
 <meta name="author" content="דוד הוכמן">
@@ -254,3 +254,4 @@ setInterval(updateDateTime,1000);updateDateTime();
 </script>
 </body> 
 </html>
+
