--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="he" dir="rtl">
-<head>
+<head>  
 <meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
-<meta charset="UTF-8">
-<title>דּף הַבַּיִת</title>
+<meta charset="UTF-8">  
+<meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
+<title>דּף הַבַּיִת</title>
 <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/6268/6268612.png" type="image/svg+xml">
-<meta name="description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל ותוכן עדכני. אתר נגיש ונוח לגלישה.">
+<meta name="description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל, ותוכן עדכני. אתר נגיש ונוח לגלישה.">
+<meta name="keywords" content="דף הבית, קישורים שימושיים, חדשות, פנאי, חיפוש, נגישות, אתר נח, תפריט צד, אתרי בית">
 <meta name="author" content="דוד הוכמן">
 <meta name="robots" content="index, follow">
 <meta name="google" content="notranslate">
+<meta property="og:title" content="דּף הַבַּיִת">
+<meta property="og:description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל ותוכן עדכני.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://your-website-url.com/">
+<meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/3/3c/Google_Favicon_2025.svg">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="דּף הַבַּיִת">
+<meta name="twitter:description" content="דף הבית הנח ביותר, עם קישורים שימושיים, חדשות ופנאי, תפריט צד ימין, חיפוש בגוגל ותוכן עדכני.">
+<meta name="google-site-verification" content="EX3cQJimgpW0qustR180xDtT-Sk70hGhW2pBQZxUxwk" />
+<meta name="twitter:image" content="https://upload.wikimedia.org/wikipedia/commons/3/3c/Google_Favicon_2025.svg">
+
+
 <style>
 body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding:0 20px 20px;direction:rtl;min-height:100vh;color:#333;display:flex;flex-direction:column}
 .side-menu{position:fixed;top:0;right:0;width:80px;height:100vh;background:#fff;box-shadow:-2px 0 10px rgba(0,0,0,0.15);display:flex;flex-direction:column;justify-content:space-between;align-items:center;padding:10px 0;z-index:20}
@@ -365,3 +379,4 @@ render();
 </script>
 </body>
 </html>
+
