--- a/index.html
+++ b/index.html
@@ -134,6 +134,12 @@ body{font-family:"Segoe UI",Arial,sans-serif;background:#f5f6fa;margin:0;padding
 <div id="clock">00:00</div>
 <div id="date">01/01/2025</div>
 </div>
+<div id="feedbackBox" style="position:fixed;top:140px;left:20px;z-index:50;">
+    <button onclick="openModal('https://docs.google.com/forms/d/e/1FAIpQLScQnsjbxUYLPf_wPTsUdHn9EnEbuoej6BPkCnL5JlneT7ckAA/viewform?usp=header')" 
+            style="padding:10px 15px; border:none; border-radius:12px; font-size:14px; cursor:pointer; font-weight:700; background:#0078d7; color:#fff; box-shadow:0 2px 8px rgba(0,0,0,.15);">
+        משתמשים קבועים? נשמח לשמוע!
+    </button>
+</div>
 <div class="home-content-box">
 <h3 style="margin:0 0 15px;background:none;padding:0;box-shadow:none;font-size:1.1em;width:100%;text-align:right;">נפתחו לאחרונה</h3>
 <div class="recent-home" id="recentHomeSimple"></div>
